mvp changes cont

--- a/app/views/prototypes/mvp/complete-john-five.html
+++ b/app/views/prototypes/mvp/complete-john-five.html
@@ -49,19 +49,11 @@
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
             </li>
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="role" aria-describedby="read-declaration-completed">
-                  Working in FE
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
-              
-            </li>
+           
           
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="subject-type" aria-describedby="company-information-completed">
+                <a href="qualification-type" aria-describedby="company-information-completed">
                   Qualifications and programmes
                 </a>
               </span>
@@ -71,7 +63,7 @@
            
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="what-contract">
+                <a href="how-long-role">
                   Contract
                 </a>
               </span>
