--- a/app/views/prototypes/mvp/how-long.html
+++ b/app/views/prototypes/mvp/how-long.html
@@ -35,7 +35,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How long did it take to fill the vacancies?
+        How long on average did it take to fill the vacancies?
       </h1>
     </legend><br>
 
@@ -80,7 +80,7 @@
 </div><br>
 
 
-          <a href="vacancies-vocational" class="govuk-button show-continue" style="display: inline;">
+          <a href="filled" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
