--- a/app/views/prototypes/mvp/staff-totals.html
+++ b/app/views/prototypes/mvp/staff-totals.html
@@ -58,7 +58,7 @@
     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Teaching support</h2>
 
     <p class="browse-list-item-subtext">
-        Mentors, assessors, technicians, teaching assistants or anyone in a learning support role
+        Staff who support teaching: mentors, assessors, technicians, teaching assistants
       </p>
        <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
     
@@ -68,7 +68,7 @@
     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Administration support</h2>
 
     <p class="browse-list-item-subtext">
-        Lorum lorum la la
+        Staff who support administration - not teaching support: receptionists, data analysts
       </p>
        <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
     
