--- a/app/views/prototypes/mvp/date.html
+++ b/app/views/prototypes/mvp/date.html
@@ -79,7 +79,7 @@
 <br>
 
 
-          <a href="date-stop" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
