--- a/app/views/prototypes/mvp/how-long-role.html
+++ b/app/views/prototypes/mvp/how-long-role.html
@@ -80,7 +80,7 @@
 <br><br>
 
 
-          <a href="what-contract" class="govuk-button show-continue" style="display: inline;">
+          <a href="date-stop" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
