--- a/app/views/prototypes/mvp/complete-john.html
+++ b/app/views/prototypes/mvp/complete-john.html
@@ -64,7 +64,7 @@
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="how-long-role">
+                <a href="what-contract">
                   Contract
                 </a>
               </span>
