apprentices text change

--- a/app/views/prototypes/mvp/apprentices.html
+++ b/app/views/prototypes/mvp/apprentices.html
@@ -31,7 +31,7 @@
 
             
 <p>
-  Tell us the number of apprentices you employed - not ones you train for other organisations.
+  Tell us the number of apprentices you employed in your organisation - not the ones you trained for other organisations.
 </p>
 
 
