check your answers

--- a/app/views/prototypes/mvp/answers-provider.html
+++ b/app/views/prototypes/mvp/answers-provider.html
@@ -33,7 +33,7 @@
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
-        <h2 class="govuk-heading-m">Staff totals</h2>
+        <h2 class="govuk-heading-m">Staff</h2>
         
 
        
@@ -41,10 +41,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              All staff
+              Managers
             </dt>
             <dd class="govuk-summary-list__value">
-              100
+              30
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -59,7 +59,7 @@
               Teachers
             </dt>
             <dd class="govuk-summary-list__value">
-              50
+              100
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -70,10 +70,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             CPD
+             Teaching support
             </dt>
             <dd class="govuk-summary-list__value">
-           Yes
+           50
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -82,13 +82,27 @@
             </dd>
           </div>
 
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             Admin support
+            </dt>
+            <dd class="govuk-summary-list__value">
+          14
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
              Apprentices
             </dt>
             <dd class="govuk-summary-list__value">
-           3
+           2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -114,10 +128,10 @@
            
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teacher vacancies
+              Teacher
             </dt>
             <dd class="govuk-summary-list__value">
-             2
+             6
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -131,7 +145,7 @@
              Not filled
             </dt>
             <dd class="govuk-summary-list__value">
-              1
+              2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -142,10 +156,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Difficult
+             Average to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              Yes
+              2-3 months
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -156,7 +170,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Subjects
+              Difficult subjects
             </dt>
             <dd class="govuk-summary-list__value">
               Construction, Hair and Beauty
@@ -187,7 +201,7 @@
               Hair and Beauty
             </dt>
             <dd class="govuk-summary-list__value">
-             Find it hard at level three and four but thats because you can earn more as a hairdresser...
+             Find it hard at level three and four but that's because you can earn more as a hairdresser...
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -223,8 +237,6 @@
               </a>
             </dd>
           </div>-->
-
-          
 
 
         </dl>
