--- a/app/views/prototypes/mvp/answers-provider.html
+++ b/app/views/prototypes/mvp/answers-provider.html
@@ -159,7 +159,7 @@
              Average to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              2-3 months
+              2 to 3 months
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
