--- a/app/views/prototypes/mvp/how-long.html
+++ b/app/views/prototypes/mvp/how-long.html
@@ -45,25 +45,25 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-            1 month or less
+            Less than on month
           </label>
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-            2 - 3 months
+            2 to 3 months
           </label>
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-            4 - 5 months
+            4 to 5 months
           </label>
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-            6 months or more
+            Over 6 months
           </label>
   
           
