--- a/app/views/prototypes/mvp/how-long.html
+++ b/app/views/prototypes/mvp/how-long.html
@@ -45,7 +45,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-            Less than on month
+            Less than one month
           </label>
         </div>
         <div class="govuk-radios__item">
