--- a/app/views/prototypes/mvp/how-long.html
+++ b/app/views/prototypes/mvp/how-long.html
@@ -43,25 +43,25 @@
 
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live">
             Less than one month
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+          <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
             2 to 3 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+          <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
             4 to 5 months
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
+          <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="#">
           <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
             Over 6 months
           </label>
