--- a/app/views/prototypes/mvp/complete-john.html
+++ b/app/views/prototypes/mvp/complete-john.html
@@ -41,7 +41,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="answers-staff" aria-describedby="eligibility-completed">
-                  Personal details
+                  Personal
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
@@ -51,7 +51,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="qualification-type" aria-describedby="company-information-completed">
-                  Qualifications and programmes
+                  Teaching
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
