--- a/app/views/prototypes/mvp/staff-totals.html
+++ b/app/views/prototypes/mvp/staff-totals.html
@@ -41,7 +41,7 @@
   <li class="browse-list-item">
    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Managers</h2>
     <p class="browse-list-item-subtext">
-        Senior and middle managers, principals, vice-principals, working directors, CEOs</p>
+      For example: senior and middle managers, principals, vice-principals, CEOs</p>
       <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </li><br>
 
