--- a/app/views/prototypes/mvp/complete-john-five.html
+++ b/app/views/prototypes/mvp/complete-john-five.html
@@ -44,7 +44,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="#" aria-describedby="eligibility-completed">
-                  Personal details
+                  Personal
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
@@ -54,7 +54,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="qualification-type" aria-describedby="company-information-completed">
-                  Qualifications and programmes
+                  Teaching
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
