staff total text

--- a/app/views/prototypes/mvp/staff-totals.html
+++ b/app/views/prototypes/mvp/staff-totals.html
@@ -31,9 +31,9 @@
 
             
 <p>
-  Tell us about any full-time, part-time or temporary staff. 
-</p>
-
+  Tell us about your full-time, part-time and temporary staff. </p>
+  <p>Only count staff once. Add them to the group they spend most of their time in.
+</p><br>
 
 
 <ul class="browse-list">
@@ -68,7 +68,7 @@
     <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Administration support</h2>
 
     <p class="browse-list-item-subtext">
-        For example: receptionists, data analysts
+        For example: HR, business development, data analysts
       </p>
        <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
     
