--- a/app/views/prototypes/mvp/list-staff-john-end.html
+++ b/app/views/prototypes/mvp/list-staff-john-end.html
@@ -52,7 +52,7 @@
 <tbody class="govuk-table__body">
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Vinecent Adams</a>
+    <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john-five">John Vinecent Adams</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
