--- a/app/views/prototypes/mvp/list-staff-john-end.html
+++ b/app/views/prototypes/mvp/list-staff-john-end.html
@@ -65,6 +65,41 @@
     <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
   </tr>
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Sharon Bansal</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+  </tr>
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Jonathan Bridger</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+  </tr>
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Henry Curtis</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+  </tr>
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">John Dory</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+  </tr>
+
+  <tr class="govuk-table__row">
+    
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
+    <td class="govuk-table__cell" scope="row"> </td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+  </tr>
   
 
 
