--- a/app/views/index.html
+++ b/app/views/index.html
@@ -122,6 +122,13 @@
 
       <br><br>
 
+      <h2 class="govuk-heading-m">Defining our MVP</h2>
+
+      <p>New flow- <a href="/prototypes/mvp-all/details">Start</a>
+      </p>
+
+      <br><br>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
