--- a/app/views/prototypes/mvp-all/add.html
+++ b/app/views/prototypes/mvp-all/add.html
@@ -37,7 +37,7 @@
 </h1>
 
             
-<p>Tell us about any full-time, part-time or temporary staff. Do not include agency workers.
+<p>Tell us about any full-time, part-time or temporary staff. Don't include agency workers.
     </p><br>
   <div class="govuk-form-group">
   <label class="govuk-label" for="full-name">
