--- a/app/views/prototypes/mvp-all/complete-john.html
+++ b/app/views/prototypes/mvp-all/complete-john.html
@@ -31,10 +31,98 @@
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
         
+        <table class="govuk-table">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              <th class="govuk-table__header" scope="col"> </th>
+              <th class="govuk-table__header" scope="col"> </th>
+            </tr>
+          </thead>
+          
+          
+          
+          <tbody class="govuk-table__body">
+
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">
+                <h3 class="govuk-heading-m">
+                <a href="#" class="govuk-link govuk-link--no-visited-state">
+                  </a></h3>
+                 
+              </td>
+              
+              <td class="govuk-table__cell" scope="row"> </td>
+             <td class="govuk-table__cell"></td>
+            </tr>
+                  
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">
+                
+                <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                  <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
+                    Personal
+                  </a></h3>
+                  <p>
+                    Date of Birth: 18 August 1992<br>
+                  Sex: Male<br>
+                  Ethnicity: White<br>
+                  Disability: No<BR>
+                Nationality: English</p>
+              </td>
+              <td class="govuk-table__cell" scope="row"> </td>
+             <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
+            </tr>
+            
+            
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">
+                
+                <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                <a href="qualification-type" class="govuk-link govuk-link--no-visited-state">
+                  Teaching</a></h3>
+                 <!--<p>
+                    18 August 1992<br>
+                  Male<br>
+                  White<br>
+                English</p>-->
+                 
+              </td>
+              <td class="govuk-table__cell" scope="row"> </td>
+             <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-notstarted">Not Started</strong></td>
+             
+          </tr>
+         
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">
+                <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                <a href="what-contract" class="govuk-link govuk-link--no-visited-state">
+                  Contract</a></h3>
+                  <!--<p>
+                    18 August 1992<br>
+                  Male<br>
+                  White<br>
+                English</p>-->
+              </td>
+              
+              <td class="govuk-table__cell" scope="row"> </td>
+             <td class="govuk-table__cell">
+              <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="contact-details-status">In progress</strong></td>
+            </tr>
+
+            
+
+            
+            
+           
         
+            
+          </tbody>
+        </table> 
 
        
-       <ol class="app-task-list">
+
+       
+       <!--<ol class="app-task-list">
         <li>
          
           <ul class="app-task-list__items">
@@ -78,7 +166,7 @@
             </li>
           </ul>
         </li>
-      </ol>
+      </ol>-->
 
 
 
