--- a/app/views/prototypes/mvp-all/complete-john.html
+++ b/app/views/prototypes/mvp-all/complete-john.html
@@ -106,7 +106,7 @@
               
               <td class="govuk-table__cell" scope="row"> </td>
              <td class="govuk-table__cell">
-              <strong class="govuk-tag govuk-tag--blue app-task-list__tag" id="contact-details-status">In progress</strong></td>
+              <strong class="govuk-tag govuk-tag--grey" id="contact-details-status">not started</strong></td>
             </tr>
 
             
