--- a/app/views/prototypes/mvp-all/complete-john.html
+++ b/app/views/prototypes/mvp-all/complete-john.html
@@ -88,7 +88,9 @@
                  
               </td>
               <td class="govuk-table__cell" scope="row"> </td>
-             <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-notstarted">Not Started</strong></td>
+             <td class="govuk-table__cell">
+               
+              <strong class="govuk-tag govuk-tag--grey" id="contact-details-status">not started</strong></td>
              
           </tr>
          
