--- a/app/views/prototypes/mvp-all/complete-john.html
+++ b/app/views/prototypes/mvp-all/complete-john.html
@@ -30,73 +30,58 @@
 
         <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
-        
-        <table class="govuk-table">
-          <thead class="govuk-table__head">
-            <tr class="govuk-table__row">
-              <th class="govuk-table__header" scope="col"> </th>
-              <th class="govuk-table__header" scope="col"> </th>
-            </tr>
-          </thead>
-          
-          
-          
-          <tbody class="govuk-table__body">
+      
 
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">
-                <h3 class="govuk-heading-m">
-                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                  </a></h3>
-                 
-              </td>
-              
-              <td class="govuk-table__cell" scope="row"> </td>
-             <td class="govuk-table__cell"></td>
-            </tr>
-                  
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">
-                
-                <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                  <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
-                    Personal
-                  </a></h3>
-                  <p>
-                    Date of Birth: 18 August 1992<br>
-                  Sex: Male<br>
-                  Ethnicity: White<br>
-                  Disability: No<BR>
-                Nationality: English</p>
-              </td>
-              <td class="govuk-table__cell" scope="row"> </td>
-             <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
-            </tr>
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
             
+            </dt>
             
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">
-                
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
+                  Personal
+                </a></h3>
+                <!--<p>
+                  Date of Birth: 18 August 1992<br>
+                Sex: Male<br>
+                Ethnicity: White<br>
+                Disability: No<BR>
+              Nationality: English</p>-->
+            </dt>
+            
+            <dd class="govuk-summary-list__actions">
+              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                <a href="qualification-type" class="govuk-link govuk-link--no-visited-state">
-                  Teaching</a></h3>
-                 <!--<p>
-                    18 August 1992<br>
-                  Male<br>
-                  White<br>
-                English</p>-->
-                 
-              </td>
-              <td class="govuk-table__cell" scope="row"> </td>
-             <td class="govuk-table__cell">
-               
+                  <a href="qualification-type" class="govuk-link govuk-link--no-visited-state">
+                    Teaching</a></h3>
+                   <!--<p>
+                      18 August 1992<br>
+                    Male<br>
+                    White<br>
+                  English</p>-->
+            </dt>
+           
+            <dd class="govuk-summary-list__actions">
               <strong class="govuk-tag govuk-tag--grey" id="contact-details-status">not started</strong></td>
-             
-          </tr>
-         
-            <tr class="govuk-table__row">
-              <td class="govuk-table__cell">
-                <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <a href="what-contract" class="govuk-link govuk-link--no-visited-state">
                   Contract</a></h3>
                   <!--<p>
@@ -104,91 +89,51 @@
                   Male<br>
                   White<br>
                 English</p>-->
-              </td>
-              
-              <td class="govuk-table__cell" scope="row"> </td>
-             <td class="govuk-table__cell">
-              <strong class="govuk-tag govuk-tag--grey" id="contact-details-status">not started</strong></td>
-            </tr>
-
+            </dt>
             
-
-            
-            
-           
-        
-            
-          </tbody>
-        </table> 
+            <dd class="govuk-summary-list__actions">
+              <strong class="govuk-tag app-tag--grey" id="contact-details-status">not started</strong></td>
+            </dd>
+          </div>
+        </dl>
 
        
 
-       
-       <!--<ol class="app-task-list">
-        <li>
-         
-          <ul class="app-task-list__items">
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="answers-staff" aria-describedby="eligibility-completed">
-                  Personal
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
-            </li>
-            
-          
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="qualification-type" aria-describedby="company-information-completed">
-                  Teaching
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
-             
-            </li>
-
-
-            
-
-
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="what-contract">
-                  Contract
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
-            </li>
-            
-          </ul>
-        </li>
-        <li>
-          
-            </li>
-          </ul>
-        </li>
-      </ol>-->
-
-
-
+      
 
         
 
         
+        <form action="/form-handler" method="post" novalidate>
 
+          
           <input type="hidden" name="answers-checked" value="true">
 
           <a href="list-staff-john" class="govuk-button show-continue" style="display: inline;">
       Staff list
     </a>
 
+          
+
         </form>
 
-      </div>
-    </div>
-  </main>
-</div>
+      
+       
+
+       
+       
+
+
+
+
+        
+
+        
+
+
+        
+
+      
 
 </fieldset><br>
 
