making the new style consistant

--- a/app/views/prototypes/mvp-all/staff-zero.html
+++ b/app/views/prototypes/mvp-all/staff-zero.html
@@ -38,6 +38,8 @@
   Your staff list
 </h1>
 
+<p>Continue to add staff and complete the sections for each member.</p>
+
 
        <table class="govuk-table">
 
