--- a/app/views/prototypes/mvp-all/complete-john-four.html
+++ b/app/views/prototypes/mvp-all/complete-john-four.html
@@ -34,48 +34,70 @@
         
 
        
-       <ol class="app-task-list">
-        <li>
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+          
+          </dt>
+          
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="#">
+              <span class="govuk-visually-hidden"> name</span>
+            </a>
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+              <a href="answers-staff" class="govuk-link govuk-link--no-visited-state">
+                Personal
+              </a></h3>
+              <!--<p>
+                Date of Birth: 18 August 1992<br>
+              Sex: Male<br>
+              Ethnicity: White<br>
+              Disability: No<BR>
+            Nationality: English</p>-->
+          </dt>
+          
+          <dd class="govuk-summary-list__actions">
+            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Completed</strong>
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+              <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+                <a href="qualification-type" class="govuk-link govuk-link--no-visited-state">
+                  Teaching</a></h3>
+                 <!--<p>
+                    18 August 1992<br>
+                  Male<br>
+                  White<br>
+                English</p>-->
+          </dt>
          
-          <ul class="app-task-list__items">
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-completed">
-                  Personal
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
-            </li>
-           
+          <dd class="govuk-summary-list__actions">
+            <strong class="govuk-tag govuk-tag--blue" id="contact-details-status">Completed</strong></td>
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
+              <a href="what-contract" class="govuk-link govuk-link--no-visited-state">
+                Contract</a></h3>
+                <!--<p>
+                  18 August 1992<br>
+                Male<br>
+                White<br>
+              English</p>-->
+          </dt>
           
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="qualification-type" aria-describedby="company-information-completed">
-                  Teaching
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
-             
-            </li>
-            
-
-            <li class="app-task-list__item">
-              <span class="app-task-list__task-name">
-                <a href="what-contract">
-                  Contract
-                </a>
-              </span>
-              <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong>
-            </li>
-            
-          </ul>
-        </li>
-        <li>
-          
-            </li>
-          </ul>
-        </li>
-      </ol>
+          <dd class="govuk-summary-list__actions">
+            <strong class="govuk-tag app-tag--grey" id="contact-details-status">not started</strong></td>
+          </dd>
+        </div>
+      </dl>
 
 
 
