--- a/app/views/prototypes/mvp-all/complete-john.html
+++ b/app/views/prototypes/mvp-all/complete-john.html
@@ -92,7 +92,7 @@
             </dt>
             
             <dd class="govuk-summary-list__actions">
-              <strong class="govuk-tag app-tag--grey" id="contact-details-status">not started</strong></td>
+              <strong class="govuk-tag govuk-tag--grey" id="contact-details-status">not started</strong></td>
             </dd>
           </div>
         </dl>
