--- a/app/views/prototypes/mvp-all/complete-john-five.html
+++ b/app/views/prototypes/mvp-all/complete-john-five.html
@@ -81,7 +81,7 @@
           </dt>
          
           <dd class="govuk-summary-list__actions">
-            <strong class="govuk-tag govuk-tag--blue" id="contact-details-status">Completed</strong></td>
+            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Completed</strong>
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -97,7 +97,7 @@
           </dt>
           
           <dd class="govuk-summary-list__actions">
-            <strong class="govuk-tag app-tag--blue" id="contact-details-status">Completed</strong></td>
+            <strong class="govuk-tag govuk-tag--blue" id="eligibility-completed">Completed</strong>
           </dd>
         </div>
       </dl>
