delete teacher sfrom vacancies

--- a/app/views/prototypes/mvp-all/many-vacancies.html
+++ b/app/views/prototypes/mvp-all/many-vacancies.html
@@ -33,7 +33,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many teacher vacancies did you have last year?
+        How many staff vacancies did you have last year?
       </h1>
     </legend><br>
     <p>
