--- a/app/views/prototypes/mvp-all/many-vacancies-filled-teacher.html
+++ b/app/views/prototypes/mvp-all/many-vacancies-filled-teacher.html
@@ -33,11 +33,13 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many management vacancies did you have last year?
+        How many teacher vacancies were you unable to fill?
       </h1>
     </legend><br>
+
     <p>
-      Include vacancies you filled and ones you didn't fill.
+      If you've advertised a role more than once - only count it once.
+    </p>
     <ul class="browse-list">
     
       <li class="browse-list-item">
@@ -54,7 +56,7 @@
 
 
 
-          <a href="many-vacancies-filled" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long-teacher" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
