--- a/app/views/prototypes/mvp-all/many-vacancies-filled.html
+++ b/app/views/prototypes/mvp-all/many-vacancies-filled.html
@@ -33,7 +33,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many vacancies were you unable to fill?
+        How many management vacancies were you unable to fill?
       </h1>
     </legend><br>
 
