--- a/app/views/prototypes/mvp-all/many-vacancies-teacher.html
+++ b/app/views/prototypes/mvp-all/many-vacancies-teacher.html
@@ -33,7 +33,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many management vacancies did you have last year?
+        How many teacher vacancies did you have last year?
       </h1>
     </legend><br>
     <p>
@@ -54,7 +54,7 @@
 
 
 
-          <a href="many-vacancies-filled" class="govuk-button show-continue" style="display: inline;">
+          <a href="many-vacancies-filled-teacher" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
