Matt and peters vacancies

--- a/app/views/prototypes/mvp-all/many-vacancies-teacher.html
+++ b/app/views/prototypes/mvp-all/many-vacancies-teacher.html
@@ -31,7 +31,7 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h1 class="govuk-fieldset__heading">
         How many teacher vacancies did you have last year?
       </h1>
@@ -53,14 +53,40 @@
 </div>
 
 
+<br>
+<div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      <h1 class="govuk-fieldset__heading">
+        How many were you unable to fill?
+      </h1>
+    </legend><br>
 
-          <a href="many-vacancies-filled-teacher" class="govuk-button show-continue" style="display: inline;">
+    <p>
+      If you've advertised a role more than once - only count it once.
+    </p>
+    <ul class="browse-list">
+    
+      <li class="browse-list-item">
+      
+        
+          <!--<p class="browse-list-item-subtext">
+            Staff who teach or train as the main part of their job</p>-->
+          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
+      </li>
+    
+  </ul>
+</fieldset>
+</div>
+
+
+
+          <a href="how-long-teacher" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
  </div>
 </div>
-        
 
 
 
