--- a/app/views/prototypes/mvp-all/apprentices.html
+++ b/app/views/prototypes/mvp-all/apprentices.html
@@ -31,7 +31,7 @@
 
             
 <p>
-  Tell us the number of apprentices you employed in your organisation - not the ones you trained for other organisations.
+  Tell us the number of apprentices you employed in 2020/21 - not the ones you trained for other organisations.
 </p>
 
 
