--- a/app/views/prototypes/mvp-all/start-staff.html
+++ b/app/views/prototypes/mvp-all/start-staff.html
@@ -42,7 +42,7 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               
-              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="staff-totals">About your organisation</a>
+              <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="apprentices">About your organisation</a>
                   </td>
               <td class="govuk-table__cell" scope="row"> </td>
               <td class="govuk-table__cell"></td>
