--- a/app/views/prototypes/mvp-all/answers-provider.html
+++ b/app/views/prototypes/mvp-all/answers-provider.html
@@ -41,10 +41,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Managers
+          Apprentices
             </dt>
             <dd class="govuk-summary-list__value">
-              30
+              2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -54,62 +54,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Teachers
-            </dt>
-            <dd class="govuk-summary-list__value">
-              100
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             Teaching support
-            </dt>
-            <dd class="govuk-summary-list__value">
-           50
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             Admin support
-            </dt>
-            <dd class="govuk-summary-list__value">
-          14
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             Apprentices
-            </dt>
-            <dd class="govuk-summary-list__value">
-           2
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
+          
 
 
           
@@ -123,7 +68,50 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
            
 
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Management
+            </dt>
+            <dd class="govuk-summary-list__value">
+              10
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
 
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             Unable to fill
+            </dt>
+            <dd class="govuk-summary-list__value">
+           2
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             How long to fill
+            </dt>
+            <dd class="govuk-summary-list__value">
+          2 to 3 months
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          
         
            
           <div class="govuk-summary-list__row">
@@ -142,7 +130,7 @@
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Not filled
+              Unable to fill
             </dt>
             <dd class="govuk-summary-list__value">
               2
@@ -156,7 +144,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Average to fill
+              How long to fill
             </dt>
             <dd class="govuk-summary-list__value">
               2 to 3 months
@@ -170,10 +158,40 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Difficult subjects
+              Vocational
             </dt>
             <dd class="govuk-summary-list__value">
-              Construction, Hair and Beauty
+              Business and Administrative,
+Construction
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            Academic
+            </dt>
+            <dd class="govuk-summary-list__value">
+              None
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Business and Administrative
+
+            </dt>
+            <dd class="govuk-summary-list__value">
+              No experienced candidates
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -187,21 +205,7 @@
               Construction
             </dt>
             <dd class="govuk-summary-list__value">
-             Level one and two were very hard to recruit because there are so few people with the right skills that want to teach.
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Hair and Beauty
-            </dt>
-            <dd class="govuk-summary-list__value">
-             Find it hard at level three and four but that's because you can earn more as a hairdresser...
+              No suitably qualified candidates
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
