--- a/app/views/prototypes/mvp-all/role.html
+++ b/app/views/prototypes/mvp-all/role.html
@@ -84,7 +84,7 @@
 <br>
 
 
-          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
+          <a href="qualification-type" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
