--- a/app/views/prototypes/mvp-all/complete-john-five.html
+++ b/app/views/prototypes/mvp-all/complete-john-five.html
@@ -71,7 +71,7 @@
           <dt class="govuk-summary-list__key">
             
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                <a href="qualification-type" class="govuk-link govuk-link--no-visited-state">
+                <a href="role" class="govuk-link govuk-link--no-visited-state">
                   Teaching</a></h3>
                  <!--<p>
                     18 August 1992<br>
