--- a/app/views/prototypes/mvp-all/role.html
+++ b/app/views/prototypes/mvp-all/role.html
@@ -52,7 +52,7 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Senior or middle manager, principal, vice-principal, working director, CEO
+          For example: senior or middle manager, principal, vice-principal, CEO
         </span>
       </div><br>
 
@@ -62,18 +62,18 @@
           Teacher
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Staff who deliver teaching or training as the main part of their job
+          Anyone who teaches or trains as the main part of their job
         </span>
       </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Support
+          Teaching support
         </label>
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Mentor, assessor, technician, teaching assistant or in a learning support role
+          For example: teaching assistant, mentor, assessor
         </span>
       </div>
 
