--- a/app/views/prototypes/mvp-all/answers-provider.html
+++ b/app/views/prototypes/mvp-all/answers-provider.html
@@ -158,6 +158,20 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+              How difficult
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Easy
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
               Vocational
             </dt>
             <dd class="govuk-summary-list__value">
