--- a/app/views/prototypes/mvp-all/filled.html
+++ b/app/views/prototypes/mvp-all/filled.html
@@ -35,7 +35,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Were any subjects difficult to find teachers for?
+        How easy or difficult was it to fill these vacancies?
       </h1>
     </legend><br>
 
