--- a/app/views/prototypes/mvp-all/how-long-education.html
+++ b/app/views/prototypes/mvp-all/how-long-education.html
@@ -94,7 +94,7 @@
 <br>
 
 
-          <a href="what-contract" class="govuk-button show-continue" style="display: inline;">
+          <a href="date-stop" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
