--- a/app/views/prototypes/mvp-all/many-vacancies.html
+++ b/app/views/prototypes/mvp-all/many-vacancies.html
@@ -31,13 +31,13 @@
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
         How many management vacancies did you have last year?
       </h1>
-    </legend><br>
-    <p>
-      Include vacancies you filled and ones you didn't fill.
+    </legend>
+   
+      
     <ul class="browse-list">
     
       <li class="browse-list-item">
@@ -56,7 +56,7 @@
 <br>
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
         How many were you unable to fill?
       </h1>
