--- a/app/views/prototypes/mvp-all/start-staff.html
+++ b/app/views/prototypes/mvp-all/start-staff.html
@@ -24,7 +24,7 @@
           <b>
         <span class="govuk-caption-xl">August 2020 to July 2021</span></h1>
 
-        <p class="govuk-body">To get government funding for further education, you must tell us about your organisation and the staff you employ.</p>
+        <p class="govuk-body">Tell us about recruitment in your organisation and the staff you employ.</p>
 
         
 
