--- a/app/views/index.html
+++ b/app/views/index.html
@@ -129,6 +129,13 @@
 
       <br><br>
 
+      <h2 class="govuk-heading-m">Back to three catagories of roles in vacancies questions</h2>
+
+      <p>New flow- <a href="/prototypes/back-vacancies/details">Start</a>
+      </p>
+
+      <br><br>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
