--- a/app/views/prototypes/back-vacancies/answers-provider.html
+++ b/app/views/prototypes/back-vacancies/answers-provider.html
@@ -84,6 +84,20 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+              Teacher
+            </dt>
+            <dd class="govuk-summary-list__value">
+              12
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
              Unable to fill
             </dt>
             <dd class="govuk-summary-list__value">
