--- a/app/views/prototypes/back-vacancies/many-vacancies-filled.html
+++ b/app/views/prototypes/back-vacancies/many-vacancies-filled.html
@@ -53,7 +53,7 @@
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        Teaching supoort
+        Teaching support
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div>
