--- a/app/views/prototypes/back-vacancies/staff-zero.html
+++ b/app/views/prototypes/back-vacancies/staff-zero.html
@@ -61,7 +61,7 @@
     <td class="govuk-table__cell" scope="row"><a class="browse-list-item-link" href="complete-john">John Vincent Adams</a>
         </td>
     <td class="govuk-table__cell" scope="row"> </td>
-   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Incomplete</strong></td>
+   <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Started</strong></td>
   </tr>
   
   
